# 4IROS

./: .clang-format  .gitignore  CMakeLists.txt  README.md  mkgrub.sh  parse_symtab.py
.github/workflows/: clang-cmake.yml  clang-gcc.yml  cmake-multi-platform.yml  cmake.yml
cmake/: toolchain-clang-arm.cmake  toolchain-clang-x64.cmake  toolchain-clang.cmake  toolchain.cmake
include/: stb_image.h  stb_truetype.h
include/kernel/: Debug.h  Syscall.h  assert.h  icxxabi.h  minmax.h  printk.h  prof.h
include/kernel/arch/amd64/: kernel.h  x64_sched_help.h  x86_64.h
include/kernel/arch/i386/: i386.h
include/kernel/arch/x86_common/: IO.h
include/kernel/driver/: BochsFramebuffer.h  PS2Keyboard.h  Serial.h  TTY.h  VGAFramebuffer.h
include/kernel/mem/: PageFrameAllocator.h  Paging.h  malloc.h
include/kernel/shedule/: proc.h
include/kernel/unix/: ELF.h
include/kernel/util/: Bitmap.h  HashTable.h  Pool.h  Singleton.h  Smrt.h  Vec.h  ism.h
include/kernel/vfs/: stddev.h  vfs.h
include/kernel/vfs/block/: ata.h
include/kernel/vfs/fs/: ext2.h
kernel/: CMakeLists-bak.txt  CMakeLists.txt  Debug.cpp  Debug.h  PIC.cpp  PIC.h  PIT.cpp  PIT.h  Syscall.cpp  assert.h  gdt.cpp  gdt.h  icxxabi.cpp  icxxabi.h  idt.cpp  idt.h  linker.ld  main.cpp  multiboot.h  printk.cpp  printk.h  prof.cpp  stdarg.h  stdint.h  string.cpp  string.h  test_program.h  test_program2.h  ubsan.cpp
kernel/abstract/: Timer.h
kernel/arch/: arch_paging.h
kernel/arch/amd64/: CMakeLists.txt  linker.ld  x64_preinit.cpp  x64_sched_help.cpp  x64_start.cpp
kernel/arch/amd64/asm/: 64cont.S  boot.S  grib.S  interrupt.S  syscall.S
kernel/arch/arm/: arm.h  init.cpp  linker.ld
kernel/arch/arm/asm/: boot.S
kernel/arch/i386/: IO.h  i386.h  kernel.h
kernel/arch/i386/asm/: boot.S  interrupt.S
kernel/driver/: BochsFramebuffer.cpp  PS2Keyboard.cpp  PS2Keyboard.h  Serial.cpp  TTY.cpp  VGAFramebuffer.cpp
kernel/mem/: PageFrameAllocator.cpp  PageFrameAllocator.h  Paging.cpp  Paging.h  actualmalloc.cpp  malloc.cpp  malloc.h
kernel/old/: PIC.cpp  PIC.h  PIT.cpp  PIT.h
kernel/shedule/: proc.cpp
kernel/tasking/: ELF.cpp  ELF.h  Process.cpp  Process.h  Scheduler.cpp  Scheduler.h
kernel/util/: Bitmap.cpp  Bitmap.h  MemBinTree.cpp  MemBinTree.h  NBitmap.cpp  NBitmap.h  Singleton.h  Spinlock.cpp  Spinlock.h  String.h  Vec.h  ism.h
kernel/vfs/: stddev.cpp  stddev.h  vfs.cpp  vfs.h
kernel/vfs/block/: ata.cpp  ata.h
kernel/vfs/fs/: ext2.cpp  ext2.h
libc/: CMakeLists.txt  alloca.c  alloca.h  assert.h  crt0.c  ctype.c  ctype.h  dirent.c  dirent.h  errno.c  errno.h  fcntl.h  gprof.c  gprof.h  limits.h  math.c  math.h  poll.c  poll.h  signal.c  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  temporary_malloc.cpp  termio.h  termios.c  termios.h  time.c  time.h  unistd.c  unistd.h  values.h
libc/asm/: mathhelp.S
libc/priv/: common.h  memops.h  util.h
libc/runtime/: CMakeLists.txt  crt0.c
libc/runtime/asm/: crt0s.S
libc/sys/: ioctl.c  ioctl.h  mman.c  mman.h  stat.c  stat.h  time.c  time.h  types.h
programs/: CMakeLists.txt  cat.c  farbview.c  gol.c  init.c  less.c  linker.ld  ls.c  say.c  shell.c  term.c  test.c  time.c  touch.c  wump.c
src/: linker.ld  main.cpp  stdint.h
test_programs/: test_program2.S
