cmake_minimum_required(VERSION 3.13)
project(4I C CXX ASM)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-builtin -O0 -ggdb -gdwarf-2 -Wall -nostdlib -mno-red-zone")
set(CMAKE_ASM_FLAGS "${CMAKE_ASM_FLAGS} -O0 -ggdb")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffreestanding -fno-builtin -O0 -ggdb -gdwarf-2 -Werror -Wall -Wextra -fno-exceptions -fno-rtti -nostdlib -mno-red-zone")
add_subdirectory(libc)
add_subdirectory(kernel)
add_subdirectory(kernel/arch/amd64)
#add_subdirectory(programs)
